@@ -76,6 +76,11 @@ Drupal.behaviors.menuMiniPanels = function(context) {
 
   // Mark target element as selected.
   MenuMiniPanels.setCallback('beforeShow', function(qTip, event, content) {
+    // Forceably remove the class off all DOM elements, avoid problems
+    // of it not being properly removed in certain scenarios.
+    $('.qtip-hover').removeClass('qtip-hover');
+
+    // Add the hover class to the current item.
     var target = $(qTip.elements.target.get(0));
     if (target !== undefined) {
       target.addClass('qtip-hover');
@@ -84,8 +89,7 @@ Drupal.behaviors.menuMiniPanels = function(context) {
 
   // Unmark target element as selected.
   MenuMiniPanels.setCallback('beforeHide', function(qTip, event, content) {
-    // Forceably remove the class off all DOM elements, avoid problems
-    // of it not being properly removed in certain scenarios.
+    // Remove the class off all DOM elements.
     $('.qtip-hover').removeClass('qtip-hover');
   });
 };
