@@ -7,6 +7,7 @@ Menu_MiniPanels 6.x-1.x-dev, xxxx-xx-xx
   compatibility with other modules.
 #1580312 by codycraven: Improved the custom JS to be cleaner and more
   compatible with theming changes.
+#1425046 by jwilson3: Hover class could still get stuck in certain scenarios.
 
 
 Menu_MiniPanels 6.x-1.3-rc6, 2012-04-28
